--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 	<meta property="og:url" content="https://silvamiguel.com/">
 	<meta property="og:title" content="Silva Miguel - Backend developer">
 	<meta property="og:description" content="Soy Silva Miguel de Buenos Aires, Argentina, apasionado por la tecnología, el emprendimiento y la simplificación de procesos. Actualmente en mi carrera como desarrollador back-end, apuntando como desarrollador de software.">
-	<meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+	<meta property="og:image" content="https://images5.alphacoders.com/521/521476.jpg">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://silvamiguel.com/">
 	<meta property="twitter:title" content="Silva Miguel - Backend developer">
 	<meta property="twitter:description" content="Soy Silva Miguel de Buenos Aires, Argentina, apasionado por la tecnología, el emprendimiento y la simplificación de procesos. Actualmente en mi carrera como desarrollador back-end, apuntando como desarrollador de software.">
-	<meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+	<meta property="twitter:image" content="https://images5.alphacoders.com/521/521476.jpg">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&family=Russo+One&display=swap" rel="stylesheet">
