--- a/projecjs.html
+++ b/projecjs.html
@@ -7,16 +7,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&family=Russo+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <!-- Primary Meta Tags -->
-    <title>Silva Miguel Angel - Proyectos</title>
-    <meta name="title" content="Silva Miguel Angel - Proyectos">
-    <meta name="description" content="Actualmente en mi carrera como desarrollador back-end.
-    En esta sección verán mis proyectos mas destacados en toda mi carrera.">
-	
-    <!-- SEO -->
-    <meta name="author" content="Silva Miguel Angel">
-    <meta name="robots" content="index, follow">
-    <meta name="keywords" content="Programacion, Backend developer, Silva Miguel, Silva Miguel Angel, Silva Miguel Hogar Naval Stella Maris, Silva Miguel UBA, UBA, Silva Miguel Developer, Silva Miguel Desarrollador, Chrome extension kru sport  de silva Miguel, bots silva miguel, telegram bot, bot discord, creacion de bots, creacion de bots de discord, creacion de bots de telegram">
+	<!-- Primary Meta Tags -->
+	<title>Silva Miguel - Proyectos</title>
+	<meta name="title" content="Silva Miguel - Proyectos como backend developer">
+	<meta name="description" content="Buenas, soy Silva Miguel en esta seccion les mostrare todos mis proyectos destacamos como backend developer.">
+	<meta name="keywords" content="developer, programacion, silva miguel, silva miguel developer, proyectos de silva miguel, miguel, silva, bots de discord, bots de telegram, proyectos como backend developer">
+	<meta name="author" content="Silva Miguel">
+    	<meta name="copyright" content="Silva Miguel">
+   	<meta name="robots" content="index">
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://silvamiguel.com/">
+	<meta property="og:title" content="Silva Miguel - Proyectos como backend developer">
+	<meta property="og:description" content="Buenas, soy Silva Miguel en esta seccion les mostrare todos mis proyectos destacamos como backend developer.">
+	<meta property="og:image" content="https://images5.alphacoders.com/521/521476.jpg">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://silvamiguel.com/">
+	<meta property="twitter:title" content="Silva Miguel - Proyectos como backend developer">
+	<meta property="twitter:description" content="Buenas, soy Silva Miguel en esta seccion les mostrare todos mis proyectos destacamos como backend developer.">
+	<meta property="twitter:image" content="https://images5.alphacoders.com/521/521476.jpg">
 </head>
 <body>
     <body class="s1">
