--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="keywords" content="developer, programacion, silva miguel, silva miguel developer, proyectos de silva miguel, miguel, silva, bots de discord, bots de telegram">
 	<meta name="author" content="Silva Miguel">
     	<meta name="copyright" content="Silva Miguel">
-   	<meta name="robots" content="index">
+   	<meta name="robots" content="index,follow"/>
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://silvamiguel.com/">
@@ -43,7 +43,7 @@
         <hr>
         <section>
             <p>
-                <a href="./projecjs.html">Projectos</a>
+                <a href="./projecjs">Projectos</a>
                 <a href="./assets/resume/resume.pdf" target="_blank">Resumen</a>
             </p>
             <p>
