--- a/projecjs.html
+++ b/projecjs.html
@@ -14,7 +14,7 @@
 	<meta name="keywords" content="developer, programacion, silva miguel, silva miguel developer, proyectos de silva miguel, miguel, silva, bots de discord, bots de telegram, proyectos como backend developer">
 	<meta name="author" content="Silva Miguel">
     	<meta name="copyright" content="Silva Miguel">
-   	<meta name="robots" content="index">
+   	<meta name="robots" content="index,follow"/>
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://silvamiguel.com/">
@@ -47,7 +47,7 @@
                     </div>
                 </p>
                         <p>Contactame en <a href="mailto:silvamiguelangel02@outlook.com" target="_blank">silvamiguelangel02@outlook.com</a> o <a href="https://www.linkedin.com/in/miguel-silva-336303203/" target="_blank">LinkedIn</a>
-                        <p>Más información <a href="./index.html">aquí</a></p>
+                        <p>Más información <a href="./index">aquí</a></p>
                 </p>
             </section>
             <hr>
