--- a/projecjs.html
+++ b/projecjs.html
@@ -47,7 +47,7 @@
                     </div>
                 </p>
                         <p>Contactame en <a href="mailto:silvamiguelangel02@outlook.com" target="_blank">silvamiguelangel02@outlook.com</a> o <a href="https://www.linkedin.com/in/miguel-silva-336303203/" target="_blank">LinkedIn</a>
-                        <p>Más información <a href="./index">aquí</a></p>
+                        <p>Más información <a href="./">aquí</a></p>
                 </p>
             </section>
             <hr>
